<resources>
    <string name="app_name">科勒</string>
    <string name="app_name_english">KHOLER.</string>
    <string name="home">首页</string>
    <string name="whole_category">产品清单</string>
    <string name="ar">AR扫一扫</string>
    <string name="account">账户</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="Dialog_Multi_Permission">多个权限</string>
    <string name="permission_illegal_code">非法权限</string>
    <string name="Toast_permission">权限</string>
    <string name="stacklayoutmanager">com.mengyang.kohler.whole_category.view.StackLayoutManager</string>
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>
    <string name="refresh">刷新</string>
    <string name="commercial_products">商用产品</string>
    <string name="steam_equipment">蒸汽设备</string>
    <string name="shower_room">淋浴房</string>
    <string name="ceramic_tile">瓷砖石材</string>
    <string name="qing_shu_bao_toilet_seat">C³清舒宝智能座便盖</string>
    <string name="toilet_seat_cover">座便器盖板</string>
    <string name="super_toilet_seat_c3">C³清舒宝智能座便盖</string>
    <string name="super_toilet_seat">一体超感座便器</string>
    <string name="toilet_heater">浴室净•暖机（浴霸）</string>
    <string name="toilet_seat">座便器</string>
    <string name="shower_room_parts">浴室配件</string>
    <string name="shower_room_nozzle">浴室龙头</string>
    <string name="shower_nozzle">淋浴龙头</string>
    <string name="makeup">梳妆</string>
    <string name="massage_bathtub">按摩浴缸</string>
    <string name="bathtub">浴缸</string>
    <string name="search">产品搜索Search SKU</string>
    <string name="art_design"><![CDATA[Art&Design]]></string>
    <string name="brand_selection">科勒品牌精选</string>
    <string name="kohler_selection">科勒精选</string>
    <string name="editor_selection">Editor Selection</string>
    <string name="special_recommendation">特别推荐</string>
    <string name="view_all">View All</string>
    <string name="my_brochure">My Brochure</string>
    <string name="books">我的图册</string>
    <string name="where_to_buy">Where to Buy</string>
    <string name="find_shop">查找店铺</string>
    <string name="mine_account">我的账户</string>
    <string name="mine_like">我的收藏</string>
    <string name="reservation_query">预约查询</string>
    <string name="viewed">Viewed</string>
    <string name="your_browsing">我的浏览</string>
    <string name="commodity_details">商品详情</string>
    <string name="like">收藏</string>
    <string name="go_pay">去购买</string>
    <string name="dealers_meeting">2018科勒中国经销商大会</string>
    <string name="login">登录</string>
    <string name="forget_the_password">忘记密码？</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_sms_verification_code">短信验证码</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_phone_num_again">请再次输入手机号码</string>
    <string name="kohler_store">科勒门店 (地图)</string>
    <string name="get_started">Get Started</string>
    <string name="select">精选</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="modify_pwd">修改密码</string>
    <string name="modify_bind_phone">修改绑定手机</string>
    <string name="sign_out">登出</string>
    <string name="system_msg">系统消息</string>
    <string name="sign_in">Sign In</string>
    <string name="register">注册</string>
    <string name="register_english">Register</string>
    <string name="login_pwd">登录密码</string>
    <string name="send_out">发送</string>
    <string name="go_login">已有账号，去登录</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_result">搜索结果</string>
    <string name="input_new_phone_num">请输入新手机号码</string>
    <string name="determine">确定</string>
    <string name="input_old_phone_num">请输入原手机号码</string>
    <string name="inpit_old_pwd">请输入旧密码</string>
    <string name="user_register">用户注册</string>
    <string name="distributor_register">科勒员工和经销商用户注册</string>
    <string name="designer_register">设计师用户注册</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_title">Verification Code</string>
    <string name="input_deigner_code">请输入经销商验证码</string>
    <string name="customer_service">客服主页</string>
    <string name="user_msg_edit">个人信息编辑</string>
    <string name="name">名字</string>
    <string name="input_name">请输入姓名</string>
    <string name="done">完成</string>
    <string name="mine_manual">我的图册</string>
    <string name="size_diagram">尺寸图</string>
    <string name="installation_instructions">安装说明书</string>
    <string name="purchase_inquiries">购买查询</string>
    <string name="commodity_classification">商品分类</string>
    <string name="invitation">邀请函</string>
    <string name="invitation_english">Invitation</string>
    <string name="reminder">Reminder</string>
    <string name="timed_remind">议程提醒</string>
    <string name="time_">时间：</string>
    <string name="ndc">NDC</string>
    <string name="kohler_china_meeting">科勒中国经销商大会</string>
    <string name="msg_reminder_push_open">点击开启议程消息提醒推送</string>
    <string name="msg_reminder_push_off">点击关闭议程消息提醒推送</string>
    <string name="next_agenda">下一议程</string>
    <string name="position_">位置：</string>
    <string name="name_">名称：</string>
    <string name="live">Live</string>
    <string name="real_time_dynamic">现场实时投票</string>
    <string name="conference_agenda">会议议程</string>
    <string name="now_agenda">当前议程</string>
    <string name="day_agenda">每日议程</string>
    <string name="over_agenda">过期议程</string>
    <string name="live_real_time">现场实时投票</string>
    <string name="cancel">取消</string>
    <string name="download_preview">下载预览</string>
    <string name="download_size_diagram">您将下载尺寸图</string>
    <string name="download_installation_instructions">您将下载安装说明书</string>
    <string name="nearby_shops">附近店铺</string>
    <string name="about_kohler">关于科勒</string>
    <string name="browsing_no_login">您登录后可查看产品的浏览记录</string>
    <string name="login_or_register">请点击登录或注册</string>
    <string name="input_distributor_code">请输入科勒通过短信下发的经销商专用码</string>
    <string name="input_login_pwd">请输入登录密码</string>
    <string name="please_vote">请投票选取“最佳着装奖”</string>
    <string name="voting_cannot_be_withdrawn">每张图片每个用户可投票一次,不可撤回</string>
    <string name="privacy_policy_text">一、我们可能收集的信息 （一）与个人身份无关的信息： 当您使用网易服务时，我们可能收集和汇总诸如用户的来源途径、访问顺序等信息，例如记录使用网易服务的每个用户的来源途径、浏览器软件等。 （二）有关个人身份的信息： 当您使用网易服务时，我们可能收集和汇总或要求您提供有关个人身份的信息，例如个人身份证明（包括身份证、护照、驾驶证等）；生日、籍贯、性别、兴趣爱好、个人电话号码、面部特征；网络身份标识信息（包括系统账号、IP地址、电子邮箱地址及与前述有关的密码、口令、口令保护答案等）；个人财产信息（交易记录、余额、优惠券、游戏类兑换码、银行卡信息等）；通讯信息；个人上网记录和日志信息（包括网站浏览记录、软件使用记录、点击记录、操作日志等）；设备信息（包括设备型号、设备MAC地址、操作系统类型、设备设置）；软件列表唯一设备识别码（如IMEI/android ID/IDFA/OPENUDID/GUID、SIM卡IMSI信息等在内的描述个人常用设备基本情况的信息）；位置信息（包括行程信息、精准定位信息、住宿信息、经纬度等）。 我们收集您的信息主要是为了您和其他用户能够更容易和更满意地使用网易服务。网易的目标是向所有的互联网用户提供安全、刺激、有趣及有教益的上网经历。而这些信息有助于我们实现这一目标。 请注意，如您在网易服务中其他用户可见的公开区域内上传或发布的信息中、您对其他人上传或发布的信息作出的回应中公开您的个人信息，该等信息可能会被他人收集并加以使用。当您发现网易的用户不正当地收集或使用您或他人的信息时，请联系Privacy@service.netease.com. 二、我们如何收集和使用信息 （一）我们将通过以下途径收集和获得您的信息： 1、您提供的信息。 例如： （1）您在注册网易服务的帐号或使用网易服务时，向我们提供的信息； （2）您通过网易服务向其他方提供的共享信息，以及您使用网易服务时所储存的信息。</string>
    <string name="jump">跳转</string>
    <string name="jump_tianmao">您即将跳转至天猫科勒旗舰店</string>
    <string name="you_can_cancel">您可至我的收藏将其取消收藏</string>
    <string name="i_know">知道了</string>
    <string name="date_">日期：</string>
    <string name="abstract_">摘要：</string>
    <string name="pop_meeting_abstract">用户可以通过官网在线预约功能向直接预\n约门店访问和微装的上门访问，该议程将详细阐\n述在线预约系统的功能和实际应用方法。</string>
    <string name="input_new_name">请输入新昵称</string>
    <string name="select_classification">精选分类</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="next">下一步</string>
    <string name="time_of_appointment">预约时间</string>
    <string name="store_address">店铺地址</string>
    <string name="reservation_code">预约码</string>
    <string name="list_of_books">图册列表</string>
    <string name="brochure_list">Brochure List</string>
    <string name="mine_atlas">我的图册</string>
    <string name="confirm_the_replacement">确认更换</string>
    <string name="msg_no_ok">请将信息填写完成！</string>
    <string name="phone_num_agreement">两次输入的手机号码需一致！</string>
    <string name="list_visible">列表显示</string>
    <string name="map_visible">地图显示</string>
    <string name="new_pwd_6_16">请输入6-16位字符的新密码</string>
    <string name="new_pwd_6_16_again">请再次输入6-16位字符的新密码</string>
    <string name="technology">颜色/表面处理工艺：</string>
    <string name="product_attributes">产品属性：</string>
    <string name="data_download">技术资料下载：</string>
    <string name="vote">Vote</string>
    <string name="wonderful_collection">精彩集锦</string>
    <string name="agenda">Agenda</string>
    <string name="vote_chinese">投TA一票</string>
    <string name="no_jurisdictuon">您暂时没有访问权限</string>
    <string name="is_delete">确认删除</string>
    <string name="deleteing">您将删除</string>
    <string name="barrage">我要爬墙</string>
    <string name="barrage_talbe">演讲提问&amp;弹幕互动</string>
    <string name="send_barrage">您好!您在这里输入的文字，会在大屏幕上显示哦！赶快来 输入吧！</string>
    <string name="share_describe">分享</string>
    <string name="share_success">分享成功</string>
    <string name="pwd_format">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="weekly_radio_concert_cn">星期广播音乐会</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="whole_cabinet">整体橱柜</string>
    <string name="kitchen_sink">厨盆</string>
    <string name="kitchen_accessories">厨房配件</string>
    <string name="kitchen_faucet">厨房龙头</string>
    <string name="water_purification">净水</string>
    <string name="select_want_have_product">请选择您想了解的产品<font color="red"> *</font></string>
    <string name="select_store">请选择您离您最近的店<font color="red"> *</font></string>
    <string name="select_time_in_store">请填写您方便进店的时间<font color="red"> *</font></string>
    <string name="select_telphone_num">请填写您的手机号码<font color="red"> *</font></string>
</resources>