<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context="com.mengyang.kohler.home.fragment.HomeFragment">

    <com.mengyang.kohler.common.view.TopView
        android:id="@+id/tv_home_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:is_back="true"
        app:is_customer_service="false"
        app:is_menu="false"
        app:is_settings="true"
        app:is_system_msg="false"
        app:title="@string/app_name_english"
        app:title_color="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_home_search"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:drawableRight="@mipmap/ic_launcher_round"
                    android:hint="@string/search"
                    android:singleLine="true"
                    android:textColor="#6e6e6e"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#2c2c2c"/>

                <com.ryane.banner_lib.AdPlayBanner
                    android:id="@+id/ab_home_loop"
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:layout_marginTop="12dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal"
                    android:padding="13dp">

                    <View
                        android:id="@+id/v_home_banner1"
                        android:layout_width="25dp"
                        android:layout_height="2dp"/>

                    <View
                        android:id="@+id/v_home_banner2"
                        android:layout_width="25dp"
                        android:layout_height="2dp"/>

                    <View
                        android:id="@+id/v_home_banner3"
                        android:layout_width="25dp"
                        android:layout_height="2dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/art_design"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_selection"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/my_brochure"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editor_selection"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/special_recommendation"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"/>

                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="#000000"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home_editor_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/where_to_buy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_shop"/>

            <ImageView
                android:id="@+id/iv_home_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
