<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mengyang.kohler.main.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ev_login_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/input_phone_num"
        android:inputType="phone"
        android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/ev_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/tv_login_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/forget_the_password"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/black_circular_foursquare_bt_bg"/>
</LinearLayout>
