<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mengyang.kohler.account.activity.ForgetPasswordOneActivity">

    <com.mengyang.kohler.common.view.TopView
        android:id="@+id/tv_forget_password_one_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:is_back="false"
        app:is_customer_service="true"
        app:is_iv_top_title="true"
        app:is_menu="true"
        app:is_share="true"
        app:is_system_msg="true"
        app:title="@string/forget_password"
        app:title_color="#000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y120"
        android:layout_marginStart="@dimen/x120"
        android:layout_marginEnd="@dimen/x120"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_forget_password_one_phone_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/y93"
                android:background="@null"
                android:textSize="12sp"
                android:inputType="phone"
                android:hint="@string/input_phone_num"/>

            <Button
                android:id="@+id/bt_forget_password_one_send_phone_num"
                android:layout_width="@dimen/x156"
                android:layout_height="@dimen/y72"
                android:layout_marginTop="@dimen/y93"
                android:textSize="12sp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/send_out"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y36"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/et_forget_password_one_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y96"
            android:background="@null"
            android:hint="@string/input_verification_code"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y36"
            android:background="@color/black"/>

        <Button
            android:id="@+id/bt_forget_password_one_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y156"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y208"
            android:background="@color/black"
            android:text="@string/next"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
