<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mengyang.kohler.account.activity.ModifyPwdActivity">

    <com.mengyang.kohler.common.view.TopView
        android:id="@+id/tv_modify_pwd_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:is_back="false"
        app:is_customer_service="true"
        app:is_iv_top_title="true"
        app:is_menu="true"
        app:is_share="true"
        app:is_system_msg="true"
        app:title="@string/modify_pwd"
        app:title_color="#000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y120"
        android:layout_marginStart="@dimen/x120"
        android:layout_marginEnd="@dimen/x120"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_modify_pwd_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:layout_marginTop="@dimen/y93"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/inpit_old_pwd"
            android:inputType="textPassword"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y36"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/et_modify_pwd_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:layout_marginTop="@dimen/y96"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/new_pwd_6_16"
            android:inputType="textPassword"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y36"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/et_modify_pwd_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:layout_marginTop="@dimen/y96"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/new_pwd_6_16_again"
            android:inputType="textPassword"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y36"
            android:background="@color/black"/>

        <Button
            android:id="@+id/bt_modify_pwd_determine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y156"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y108"
            android:background="@color/black"
            android:text="@string/determine"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
